leaderboard adding and editing

--- a/1page.html
+++ b/1page.html
@@ -36,7 +36,7 @@
 				<td><a  href="text/2howto.html" target="framez" onclick= "showImg(2)" class="imagebutton2"></a>
 				FAQ</td>
 				<td><a  href="text/3leaders.html" target="framez" onclick= "showImg(3)" class="imagebutton3"></a>
-				TOP PLAYERS</td>
+				LEADERBOARD</td>
 				<td><a  href="text/4about.html" target="framez" onclick= "showImg(4)" class="imagebutton4"></a>
 				ABOUT</td>
 				</table>
