--- a/text/3leaders.html
+++ b/text/3leaders.html
@@ -4,17 +4,21 @@
 	<head>
 	
 		<link rel="stylesheet" type="text/css" href="font.css">
-	
+		
+		<script src="leaderboard.js"></script>
+		
 	</head>
-
 
 	<center>
 	
-		<div>
+		<div id="leaderboard" class="leaderboard">
+			
+			<h1><font class="red">LEADEBOARD</font></h1>
+			<h2><ul class="LeaderboardPlayers"></ul><h2>
 		
-		<h1><font class="red">LEADER</font> BOARD:</h1>
 		</div>
 	
 	</center>
+
 
 </html>
