--- a/typer.html
+++ b/typer.html
@@ -12,8 +12,15 @@
 			width: 100%;
 			height: 100%;
 		}
-		canvas {
+		#canvas {
 			position: absolute;
+		}
+		
+		#Reloader{
+			position:fixed;
+			top: 90%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 		}
 	</style>
 	<script src="TYPER.js"></script>
@@ -22,6 +29,10 @@
 <body>
 	
 
-	<canvas id="canvas1"></canvas>
+	<canvas id="canvas"></canvas>
+	<div >
+		<input id="Reloader" type="button" value="New Game" onClick="window.location.reload()">
+	</div>
+	
 </body>
 </html>
