--- a/typer.html
+++ b/typer.html
@@ -9,7 +9,7 @@
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<canvas id="canvas"></canvas>
 	<div id="info">
 		<div id="intro">
 			<h2>Tutvustus</h2>
