--- a/typer.html
+++ b/typer.html
@@ -15,6 +15,47 @@
 		#canvas {
 			position: absolute;
 		}
+		
+button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #000000;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+button:hover span {
+  padding-right: 25px;
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 	</style>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
@@ -25,9 +66,9 @@
 	
 	<canvas id="canvas"></canvas>
 	<div>
-		<canvas id="box" width="200" height="300" 
-		style="position: absolute; top:0; left:0;"></canvas>
-		<button style="position: absolute; top:20px; left:20px;" onclick="myFunction()">New Game</button>
+		<!-- <canvas id="box" width="200" height="300" -->
+		<style="position: absolute; top:0; left:0;"></canvas>
+		<button class="button" style= "vertical-align: middle; position: absolute; top: 20px; left: 20px;" onclick="NewGame()"><span>Uus mäng</span></button>
 	</div>
 	
 	
