Adding final version of the game

--- a/typer.html
+++ b/typer.html
@@ -16,10 +16,10 @@
 			position: absolute;
 		}
 	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src="TYPER.js" defer></script>
+    <script src="Word.js" defer></script>
 </head>
 <body>
-	<canvas></canvas>
+	<canvas id="canvas"></canvas>
 </body>
 </html>
