--- a/typer.html
+++ b/typer.html
@@ -19,6 +19,7 @@
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 	<!-- MENÜÜ -->
@@ -45,7 +46,7 @@
             <p><input id="p_name" type="text" name="user"></p>
             <p><button onclick="newGame()">Edasi</button></p>
             <br><br><br>
-            <h3>Edetabel</h3>
+            <div id="scores" class="col-sm-3 col-sm-offset-5"></div>
 
         </div>
         
