Last score overwritten each time a new game is started.

--- a/typer.html
+++ b/typer.html
@@ -16,8 +16,8 @@
 			position: absolute;
 		}
 	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src="TYPER.js?v="<?date_timestamp_get(date_create());?>></script>
+    <script src="Word.js?v="<?date_timestamp_get(date_create());?>></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
