--- a/homepage.html
+++ b/homepage.html
@@ -1,115 +1,137 @@
-
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<script type="text/javascript" scr="TYPER.js" defer></script>
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Typer game!</title>
-  <meta charset="utf-8">
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
+    <title>Typer game!</title>
+    <meta charset="utf-8">
+    <style>
+        /* Remove the navbar's default margin-bottom and rounded borders */
 
-    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 100%}
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 
-    /* Set gray background color and 100% height */
-    .sidenav {
-      padding-top: 20px;
-      background-color: #f1f1f1;
-      height: 100%;
-    }
+        .row.content {
+            height: 100%
+        }
+        /* Set gray background color and 100% height */
 
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
+        .sidenav {
+            padding-top: 20px;
+            background-color: #f1f1f1;
+            height: 100%;
+        }
+        /* Set black background color, white text and some padding */
 
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;}
-    }
-  </style>
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 15px;
+        }
+        /* On small screens, set height to 'auto' for sidenav and grid */
+
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 15px;
+            }
+            .row.content {
+                height: auto;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">TYPER</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About the game</a></li>
-        <li><a href="#"></a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-      </ul>
-    </div>
-  </div>
-</nav>
+                <a class="navbar-brand" href="#">TYPER</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<div class="container-fluid text-center">
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <!--<p><a href="#">Link</a></p>
+    <div class="container-fluid text-center">
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <!--<p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>-->
-  </div>
-    <div class="col-sm-8 text-left">
-      <h1>Welcome to the game of typer!</h1>
-      <p>This game helps you type faster in estonian and learn the language.</p>
-      <hr>
-      <h3>Highscore</h3>
-      <p>1.</p>
-      <p>2.</p>
-      <p>3.</p>
-      <p>4.</p>
-      <p>5.</p>
-      <p>6.</p>
-      <p>7.</p>
-      <p>8.</p>
-      <p>9.</p>
-      <p>10.</p>
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <a href="typer.html"><span class="glyphicon glyphicon-queen"></span> Play easymode</a>
-      </div>
-      <div class="well">
-        <a href="typer.html"><span class="glyphicon glyphicon-king"></span> Play hardmode</a>
-      </div>
-    </div>
-  </div>
-</div>
+            </div>
+            <div class="col-sm-8 text-left">
+                <h1>Welcome to the game of typer!</h1>
+                <p>Type the shown words.<br> Each correctly guessed word guves 1 point.<br> You have 30 seconds to show your skill! <br> Click on the endscreen to return home!</p>
+                <button id="butt" onclick="topList()">Click me to see top 10!</button>
+                <div id="topList"></div>
+
+            </div>
+            <div class="col-sm-2 sidenav">
+                <div class="well">
+                    <a href="typer.html"><span class="glyphicon glyphicon-queen"></span> Play TYPER</a>
+                </div>
+            </div>
+        </div>
 
 
 
-<footer class="container-fluid text-center">
-  <p>© 2017 by Siim Hütsi.</p>
-</footer>
+        <!-- <footer class="container-fluid text-center">
+            <p>© 2017 by Siim Hütsi.</p>
+        </footer> -->
 
 </body>
+<script>
+    var count = 0;
+
+    function topList() {
+        document.getElementById("butt").style.visibility = "hidden";
+        var gameData = JSON.parse(localStorage.getItem("typer"));
+
+
+        gameData.sort(function(a, b) {
+            return b.score - a.score;
+        });
+
+        gameData.forEach(function(player, key) {
+            //gamesFromStorage.forEach(function(game, key){
+            if (count >= 10) {
+                return;
+            }
+            document.getElementById("topList").style.fontSize = "100%";
+            document.getElementById("topList").innerHTML += count + 1 + " ) " + player.name + "<a style='float: right;color: maroon;padding-top: 0px'>" + player.score + "</a><hr style='padding: 0px'>";
+            count += 1;
+        });
+    }
+</script>
+
 </html>
