added finishing touches, score

--- a/typer.html
+++ b/typer.html
@@ -19,7 +19,7 @@
 		</div>
         <br>
         <br>
-        <div id="play">PLAY</div>
+        <div id="play" class="flashing">PLAY</div>
         <br>
         <div>
                 <input type="checkbox" name="Dark" value="Dark">Dark mode
