--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,60 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" href="Style.css">
+	<title>Typer</title>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
+    <script src="Table.js"></script>
 </head>
+
 <body>
-	<canvas></canvas>
+    <div id="info">
+		<div id="intro">
+            <img src="#">
+            <br>
+			<p>Kirjuta nii kiiresti kui jõuad.</p>
+		</div>
+        <br>
+        <br>
+        <div id="play">PLAY</div>
+        <br><br>
+        <div id="wrapper">
+            <div id="statistics">
+                <h3>Statistika</h3>
+                <br>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Nimi</th>
+                        <th>Skoor</th>
+                        <th>Eksimused</th>
+                        <th>Kiirus</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div id="top">
+                <h3>TOP 10 edetabel</h3>
+                <br>
+                <table id="toplist">
+                    <thead>
+                    <tr>
+                        <th>Top#</th>
+                        <th>Nimi</th>
+                        <th>Skoor</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+	</div>
+    <canvas id="canvas"></canvas>
+
 </body>
 </html>
