cleaned code, html, better css

--- a/typer.html
+++ b/typer.html
@@ -19,26 +19,11 @@
         <br>
         <br>
         <div id="play">PLAY</div>
-        <br><br>
-        <div id="wrapper">
-            <div id="statistics">
-                <h3>Statistika</h3>
-                <br>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Nimi</th>
-                        <th>Skoor</th>
-                        <th>Eksimused</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
+		<br><br>
+		<h3>Top 10 edetabel</h3>
+
             <div id="top">
-                <h3>TOP 10 edetabel</h3>
-                <br>
+			
                 <table id="toplist">
                     <thead>
                     <tr>
@@ -51,7 +36,6 @@
                     </tbody>
                 </table>
             </div>
-        </div>
 	</div>
     <canvas id="canvas"></canvas>
 
