--- a/typer.html
+++ b/typer.html
@@ -12,12 +12,9 @@
 <body>
     <div id="info">
 		<div id="intro">
-            <img src="#">
             <br>
-			<p>Kirjuta nii kiiresti kui jõuad.</p>
+			<p style="font-size: 2em;">You have 15 seconds!</p>
 		</div>
-        <br>
-        <br>
         <div id="play">PLAY</div>
 		<br><br>
 		<h3>Top 10 edetabel</h3>
