--- a/index.html
+++ b/index.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Typetest</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/TYPER.js"></script>
-	<script src="js/Word.js"></script>
-	<script src="js/app.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Typer</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+    <!-- JS -->
+    <script src="TYPER.js"></script>
+    <script src="Word.js"></script>
+</head>
 </head>
 <body>
-
-	<nav>
-		<ul>
-			<li class="menu-item"><a class="menu-item" href="#Introduction">Introduction</a></li>
-			<li class="menu-item"><a class="menu-item" href="#Game">Game</a></li>
-			<li class="menu-item"><a class="menu-item" href="#Scores">High-Scores</a></li>
-		</ul>
-	</nav>
-
-	<main role="main">
-
-		<!-- Game -->
-		<div id="Game">
-			<h1>Game</h1>
-		</div>
-
-		<!-- High-Scores -->
-		<div id="Scores">
-			<h1>High-Scores</h1>
-		</div>
-
-		<!-- Introduction -->
-		<div id="Introduction">
-			<h1>Introduction</h1>
-		</div>
-
-	</main>
-
+<main role="main">
+    <!-- Edetabel -->
+    <div id="Scores">
+        <div class="main">
+            <div>
+                <h1>High-Scores</h1>
+                <button onClick="location.href='#Play'">Play</button>
+                <button onClick="location.href='#Homepage'">Back</button>
+                <p>
+                    Note that only 10 of the best results will be shown.
+                </p>
+                <div class="topScore">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Mäng -->
+    <div id="Play">
+        <div class="main">
+            <div>
+                <h1>Typer</h1>
+                <button id=playBtn>Start</button>
+                <button onClick="location.href='#Homepage'">Back</button>
+                <p>
+                Remaining: <span id="time"></span><br>
+                Score: <span id="score"></span>
+                </p>
+                <div id="canvas">
+                    <canvas></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Koduleht -->
+    <div id="Homepage">
+        <div class="main">
+            <div>
+                <h1>Welcome</h1>
+                <button onClick="location.href='#Play'">Play</button>
+                <button onClick="location.href='#Scores'">High-Scores</button>
+                <p>
+                    Type as many words as you can in 30 seconds.<br>
+                    After you have successfully completed a word, press enter to receive the next one.<br>
+                </p>
+            </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
