--- a/typer.html
+++ b/typer.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+
 	<!-- Navigation -->
 	<nav class="menu">
 		<ul class="menu-list">
@@ -19,21 +19,20 @@
 			<li class="menu-item"><a href="#statistics-view" class="menu-link statistics-view">Statistika</a></li>
 		</ul>
 	</nav>
-	
+
 	<main role="main">
-	
+
 		<!-- Home -->
 		<div id="home-view">
 			<div class="introduction">
 				<h1>Tere tulemast mängima TYPER mängu!</h1>
 				<p>Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.</p>
 				<h2>Mängu reeglid:</h2>
+				<p>1.Sul on aega 1 minut</p>
 				<p>2.Iga õigesti kirjutatud sõna annab 1 punkti</p>
-				<p>3.Iga õigesti kirjutatud sõna lisab sinu ajale 2 sekundit</p>
-				<p>4.Iga viga mis sa teed kaotab su ajast 2 sekundit</p>
-				<p>5.Iga vale nupuvajutus kaotab su skoorist punkte</p>
-				<p>6.Mäng saab läbi kui aeg otsa saab<p>
-				<p>7. Aeg juba jookseb...<p>
+				<p>3.Iga vale nupuvajutus kaotab su skoorist punkte</p>
+				<p>4.Mäng saab läbi kui aeg otsa saab<p>
+				<p>5.Aeg juba jookseb...<p>
 			</div>
 				<div id="top10" style="float: left;">
 					<h2 class="top10_header">Top 10</h2>
@@ -45,7 +44,7 @@
 		<!-- Game -->
 		<div id="game-view">
 			<p class="message">VALMISTU KIRJUTAMA!</p>
-			
+
 			<p class="words-display">
 				<canvas>
 			</p>
@@ -65,6 +64,6 @@
 			</table>
 		</div>
 	</main>
-	
+
 </body>
 </html>
