--- a/typer.html
+++ b/typer.html
@@ -32,7 +32,7 @@
 				<p>2.Iga õigesti kirjutatud sõna annab 1 punkti</p>
 				<p>3.Iga vale nupuvajutus kaotab su skoorist punkte</p>
 				<p>4.Mäng saab läbi kui aeg otsa saab<p>
-				<p>5.Aeg juba jookseb...<p>
+				<p>5.Aeg hakkab jooksma pärast nime sisestamist.<p>
 			</div>
 				<div id="top10" style="float: left;">
 					<h2 class="top10_header">Top 10</h2>
