--- a/typer.html
+++ b/typer.html
@@ -7,7 +7,7 @@
 		<script src="TYPER.js"></script>
 		<!-- defer - script ei jookse ennem lehe laadimist -->
 		<script src="Word.js" defer></script>
-		<!--<link rel="stylesheet" type="text/css" href="style.css">-->
+		<link rel="stylesheet" type="text/css" href="style.css">
 		
 		<!-- bootstrap -->
 		<meta charset="UTF-8">
