--- a/typer.html
+++ b/typer.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>typer</title>
 	<style> 
 		* {
 			margin: 0;
 			padding: 0;
 		}
-		html, body, canvas {
+		canvas {
 			width: 100%;
 			height: 100%;
 		}
 		canvas {
-			position: absolute;
+			position: relativeS;
 		}
 	</style>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<canvas id="canvas">
+	</canvas>
 </body>
 </html>
