--- a/typer.html
+++ b/typer.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
+	<style>
 		* {
 			margin: 0;
 			padding: 0;
@@ -20,6 +20,11 @@
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<div id="canvas">
+ 		
+ 		<canvas></canvas>
+
+ 	</div>
+
 </body>
 </html>
