--- a/typer.html
+++ b/typer.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="gamestyle.css">
+	<title>Typer Game</title>
+
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
+
 	<div id="canvas">
- 		
+
  		<canvas></canvas>
+
+ 	</div>
+	<div id="data">
+
+		<h1>TIME:   <span id="time"></span></h1>
+		<h2>PLAYER:	<span id="playerName"></span></h2>
+		<h2>SCORE:  <span id="score"></span></h2>
+
+ 	</div>
+
+	<div id="back">
+
+ 		<h2><a href="intropage.html">GO BACK</a></h2>
 
  	</div>
 
