New pages for howto and about

--- a/intropage.html
+++ b/intropage.html
@@ -2,6 +2,7 @@
  <html>
  <head>
    <meta charset="UTF-8">
+   <script src="app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="style.css">
  </head>
 
@@ -37,7 +38,7 @@
         <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
           <rect id="shape" height="40" width="150" />
           <div id="text">
-            <a href=""><span class="spot"></span>How to play?</a>
+            <a href="How_to_play.html"><span class="spot"></span>How to play?</a>
           </div>
         </svg>
       </div>
@@ -54,14 +55,16 @@
         <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
           <rect id="shape" height="40" width="150" />
           <div id="text">
-            <a href=""><span class="spot"></span>About</a>
+            <a href="about.html"><span class="spot"></span>About</a>
           </div>
         </svg>
       </div>
-      <!--End button -->
 
     </div>
   </div>
+
+
+
 
  </body>
  </html>
