--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <script src="leaderboard.js"></script>
  </head>
  <body>
    <svg viewBox="0 0 960 300">
@@ -20,20 +21,9 @@
   </svg>
 <div id="workarea">
 <div class="position">
-  <h1 style="color: white;">This is how you play</h2>
+  <h1 style="color: white;">Top 5 Players:</h1>
     <br>
-    <ul style="color: white;">
-      <br>
-      <li>First you enter your name</li>
-      <br>
-      <li>Then you start typing the words that you see on the page </li>
-      <br>
-      <li>You have a time limit of 45 seconds</li>
-      <br>
-      <li>The more you get in that time the better!</li>
-      <br>
-      <li>Easy as one two three!</li>
-    </ul>
+    <h2 style="color: white;"><ul class="LeaderboardPlayers"></ul><h2>
 <br><br>
     <div class="svg-wrapper">
       <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
