--- a/intropage.html
+++ b/intropage.html
@@ -47,7 +47,7 @@
         <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
           <rect id="shape" height="40" width="150" />
           <div id="text">
-            <a href=""><span class="spot"></span>Leaderboard</a>
+            <a href="leaderboard.html"><span class="spot"></span>Leaderboard</a>
           </div>
         </svg>
       </div>
