--- a/typer.html
+++ b/typer.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="Style.css">
-	<title>Typer</title>
+	<title>TyperGame</title>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
     <script src="Table.js"></script>
@@ -17,14 +17,14 @@
 		</div>
         <div id="play">PLAY</div>
 		<br><br>
-		<h3>Top 10 edetabel</h3>
+		<h3>Top 10</h3>
 
             <div id="top">
 			
                 <table id="toplist">
                     <thead>
                     <tr>
-                        <th>Top#</th>
+                        <th>Top</th>
                         <th>Nimi</th>
                         <th>Skoor</th>
                     </tr>
