added scoreboard and basic html

--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,30 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
+		<title>Typer Est</title>
+		<script src="TYPER.js"></script>
+		<script src="Word.js"></script>
+	</head>
+	
 <body>
-	<canvas></canvas>
+			<main role="main">
+
+			<div id="scores-view">
+				<table id="scoreboard"></table>
+			</div>
+
+			<div id="game-view">
+				<h1>Mäng</h1>
+				<canvas id="NightMode"></canvas>
+			</div>
+
+			<div id="home-view">
+				<button id="nightmode" type="button" onClick="nightmode();">Öö režiim</button>
+				<button id="begingame" type="button" onClick="begingame();">Alusta mängu</button> <br><br>
+				<table id="tablePrint"></table>
+			</div>
+		</main>
 </body>
 </html>
