--- a/play.html
+++ b/play.html
@@ -16,14 +16,13 @@
     <div class="main">
         <div>
             <h1>Typer</h1>
+            <!-- <button id="playBtn"></button> -->
             <button onClick="location.href='index.html'">Back</button>
             <p>
             Remaining: <span id="time"></span><br>
             Score: <span id="score"></span>
             </p>
-            <div id="canvas">
-                <canvas></canvas>
-            </div>
+            <canvas></canvas>
         </div>
     </div>
 </body>
