lisasin Dark mode

--- a/typer.html
+++ b/typer.html
@@ -16,7 +16,11 @@
 			<p style="font-size: 2em;">You have 15 seconds!</p>
 		</div>
         <div id="play">PLAY</div>
-		<br><br>
+		<br>
+        <div>
+                <input type="checkbox" name="Dark" value="Dark">Dark mode
+        </div>
+		<br>
 		<h3>Top 10</h3>
 
             <div id="top">
