--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div id="Scores">
         <div class="main">
             <div>
-                <h1>High-Scores</h1>
+                <h1 onClick="location.href='play_HARDMODE.html'">High-Scores</h1>
                 <button onClick="location.href='play.html'">Play</button>
                 <button onClick="location.href='#Homepage'">Back</button>
                 <p>
                     Note that only 10 of the best results will be shown.
                 </p>
-                <div class="topScore">
-                </div>
+                <div class="topScore"></div>
+                <div class="easterEgg" onClick="location.href='play_HARDMODE.html'"></div>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
             <div>
                 <h1>Welcome</h1>
                 <button onClick="location.href='play.html'">Play</button>
-                <button onClick="location.href='#Scores'">High-Scores</button>
+                <button onClick="location.href='#Scores'">High-Scores</button><br>
                 <p>
                     Type as many words as you can in 30 seconds.<br>
                     After you have successfully completed a word, press enter to receive the next one.<br>
