--- a/typer.html
+++ b/typer.html
@@ -31,6 +31,8 @@
                         <th>Top</th>
                         <th>Nimi</th>
                         <th>Skoor</th>
+                        <th>Arvatud</th>
+                        <th>Vead</th>
                     </tr>
                     </thead>
                     <tbody>
