--- a/typer.html
+++ b/typer.html
@@ -2,24 +2,37 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="game.css">
+	<title>Typer Game</title>
+
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+
+	<div id="canvas">
+
+ 		<canvas></canvas>
+
+ 	</div>
+	<div id="data">
+
+		<h1>PLAYER:	<span id="playerName"></span></h1>
+		<h1>TIME:   <span id="time"></span></h1>
+		<h1>SCORE:  <span id="score"></span></h1>
+
+ 	</div>
+	<div id= "mdns">
+		
+	</div>
+	<div id="back">
+	<button onclick="madness()">What does this button do ?!</button>
+ 		<h2><a href="intropage.html">GO BACK</a></h2>
+		
+		
+
+
+ 	</div>
+
 </body>
 </html>
