sound effect on wrong pressed

--- a/typer.html
+++ b/typer.html
@@ -26,9 +26,9 @@
 		
 	</div>
 	<div id="back">
-	<button onclick="madness()">What does this button do ?!</button>
- 		<h2><a href="intropage.html">GO BACK</a></h2>
-		
+	<h2><a id="madnessLink" onclick="madness();" onhover="$(this).css('color','red');">Click me please!</a></h2>
+ 		
+	<h2><a href="intropage.html">GO BACK</a></h2>
 		
 
 
